# cse402_parallel_qr_iteration

./: CMakeLists.txt  README.md  plots.py
results/: mpi_benchmark_node.5387014.err  mpi_benchmark_node.5387014.out  mpi_benchmark_node.5387018.err  mpi_benchmark_node.5387018.out  mpi_benchmark_node.5387021.out  mpi_benchmark_node.5387043.out  mpi_benchmark_node.5387767.err  mpi_benchmark_node.5387767.out  mpi_benchmark_node.5388738.err  mpi_benchmark_node.5388738.out  omp_benchmark.5375303.out  omp_benchmark.5375306.out  omp_benchmark.5386741.err  omp_benchmark.5386741.out  omp_benchmark.5386745.out  omp_benchmark_ss.5375307.out  omp_benchmark_ss.5375326.out  omp_benchmark_ws.5382176.err  omp_benchmark_ws.5382176.out  serial_benchmark.5375301.err  serial_benchmark.5375301.out  serial_benchmark.5375309.out
scripts/: batch_script_mpi.run  batch_script_mpi_node.run  batch_script_mpi_ss.run  batch_script_mpi_ws.run  batch_script_omp.run  batch_script_omp_ss.run  batch_script_omp_ws.run  batch_script_serial.run
src/: command.txt  householder.txt  m_3x3.txt  main  main.cpp
src/helpers/: helpers.cpp  helpers.hpp
src/mpi/: CMakeLists.txt  householder_mpi.hpp  main_mpi.cpp  mpi_manager.cpp  mpi_manager.hpp  qr_mpi.cpp  qr_mpi.hpp
src/openmp/: CMakeLists.txt  householder_omp.cpp  householder_omp.hpp  main_omp.cpp  qr_eigen_omp.cpp  qr_eigen_omp.hpp
src/serial/: CMakeLists.txt  arnoldi.cpp  arnoldi.hpp  householder.cpp  householder.hpp  main_serial.cpp  qr_eigen.cpp  qr_eigen.hpp
src/utils/: data_structures.cpp  data_structures.hpp  main  main.cpp  random_generators.cpp  random_generators.hpp  utils.cpp  utils.hpp
tests/: CMakeLists.txt
